# cosy-processor

./: .gitignore  LICENSE  README.md  poetry.toml  pyproject.toml
config/: cosy.yml  default.yml  local.yml
config/StateFiles/: BreathControl  DeEss  DePlosive  DeVerberate3  ExtractDialogue  FabComp  FabGate  MouthDeClick  NeutronCompressor  PolterGate
cosy/: __init__.py  __main__.py  app.py  config.py  events.py  filesystem.py  loading_status.py  logger.py  mic_status.py  recorder.py  routes.py  stream_manager.py
cosy/handlers/: __init__.py  ai_forcedalignment_handler.py  ai_forcedalignment_preprocessing_handler.py  ai_forcedalignment_preprocessing_vad_handler.py  ai_nlp_handler.py  ai_pitchloudness_handler.py  ai_transcript_handler.py  audio_cleaner_handler.py  audio_enhancer_handler.py  audio_stitching_handler.py  backend_packaging_handler.py  communication_handler.py  handler.py  setup.py
cosy/workers/: __init__.py  audio_stitching_worker.py  backend_packaging_worker.py  cold_worker.py  communication_worker.py  hot_worker.py  worker.py
cosy/workers/util/: tempo.py
gui/: .gitignore  forge.config.ts  package-lock.json  package.json  tsconfig.json  webpack.rules.ts
gui/assets/: icon.icns
gui/src/: App.tsx  cosy.ts  index.css  index.html  index.ts  preload.ts  renderer.ts  styles.css
gui/src/components/: Button.tsx  Spinner.tsx  TextInput.tsx  Warning.tsx  spinner.css
gui/src/hooks/: useConfigStore.tsx  (+3 more)
gui/types/: interface.d.ts
scripts/: start_test_recording.sh  stop_test_recording.sh  upload_logs.sh
standalone/: docker-compose.yml
(+5 files in other folders)
